# NotAGraphicalGame

./: .gitignore  .pre-commit-config.yaml  AnimateState.py  AnimateTurn.py  AnimateTurnTest.py  Ball.py  BallClass.ipynb  BallClass.py  GraphState.ipynb  GraphState.py  LetsPlayPool.ipynb  README.md  StartGame.ipynb  StartGame.py  StateClass.ipynb  StateClass.py  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: LetsPlayPool-checkpoint.ipynb  StateClass-checkpoint.ipynb
src/: AnimateTurn.ipynb  AnimateTurnTest.py  BallClass.ipynb  GameClass.ipynb  LetsPlayPool.ipynb  LetsPlayPool.py  PlayerClass.ipynb  StartGame.py  StateClass.ipynb  Visualize.ipynb  pool.py  pool_test.ipynb  pool_test.py  start.py
src/LetsPlayPool/: __init__.py
src/ball/: __init__.py
src/game/: __init__.py
src/graphstate/: __init__.py
src/mainloop/: __init__.py
src/player/: __init__.py
src/state/: __init__.py
src/visualize/: __init__.py
tests/: test_ball.py  test_example  test_game.py  test_mainloop.py  test_player.py  test_state.py  test_visualize.py
