[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NotAGraphicalGame"
version = "0.0.1"
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "dataclasses",
  "ffmpeg-python"
]

[project.optional-dependencies]
test = [
  "pytest",
  "uncertainties",
  "pytest-mpl"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
